--- a/gatewey-microserver-dev.yml
+++ b/gatewey-microserver-dev.yml
@@ -1,5 +1,6 @@
   spring:
-    datasource:
+    datasource:}
+      driverClassName: org.postgresql.Driver
       url: jdbc:postgresql://localhost:5432/users
       username: siteruser
       password: 123456789
