--- a/gatewey-microserver-dev.yml
+++ b/gatewey-microserver-dev.yml
@@ -1,5 +1,5 @@
   spring:
-    datasource:}
+    datasource:
       driverClassName: org.postgresql.Driver
       url: jdbc:postgresql://localhost:5432/users
       username: siteruser
